# tvb-ext-rdc

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build.yml  check-release.yml  gitlab-sync.yml
guacamole_build/: docker-compose.yaml
jupyter-config/server-config/: tvb_ext_rdc.json
src/: IframeDisplay.tsx  IframeWidget.tsx  handler.ts  index.ts
style/: IframeWidget.css
tvb_ext_edc/: __init__.py
tvb_ext_rdc/: __init__.py  handlers.py
tvb_ext_rdc/labextension/: build_log.json  package.json
tvb_ext_rdc/labextension/static/: lib_index_js.db7a6cb98f28d335eed3.js  lib_index_js.db7a6cb98f28d335eed3.js.map  remoteEntry.0dc1684c97184cbc36e1.js  remoteEntry.0dc1684c97184cbc36e1.js.map  style.js  style_index_js.ad0ed05eaaa5467943c5.js  style_index_js.ad0ed05eaaa5467943c5.js.map
